# multimedia-prog

./: README.md  THUMBS_UP_GUIDE.md  __main__.py  color_touch.py  generate_sounds.py  pyproject.toml  requirements.txt  run_game.sh  test_system.py  test_thumbs_up.py
config/: config.py
docs/: DOCUMENTACAO_TECNICA.md
playground/: drum_kit.py  memory_game.py  test_thumbs_up.py  virtual_drums.py
