[project]
name = "color-touch-game"
version = "1.0.0"
description = "Um webapp interativo que combina memória visual e coordenação motora usando visão computacional"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
]
